--- a/.github/workflows/scrape-setup.yaml
+++ b/.github/workflows/scrape-setup.yaml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --global user.name "PFisk"
           git config --global user.email "pfisk@users.noreply.github.com"
-          git add data/fireball.json
+          git add ./data/fireball.json
           git commit -m "Update fireball data!" || echo "No changes to commit"
           git push origin || echo "No changes to commit"
