--- a/.github/workflows/scrape-setup.yaml
+++ b/.github/workflows/scrape-setup.yaml
@@ -21,8 +21,8 @@ jobs:
           node-version: '16' # Use the Node.js version you use locally
 
       # Step 3: Install dependencies
-      - name: Install dependencies
-        run: npm install
+      #- name: Install dependencies
+      #  run: npm install
 
       # Step 4: Run the scraper script
       - name: Run scraper
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --global user.name "PFisk"
           git config --global user.email "pfisk@users.noreply.github.com"
-          git add ./data/fireball.json
+          git add data/fireballs.json
           git commit -m "Update fireball data!" || echo "No changes to commit"
           git push origin || echo "No changes to commit"
